2005-08-18 20:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Remove commented out code.

2005-08-17 23:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: attachObject:toParent: code to handle
	addition of tab view and items.
	* Palettes/3Containers/GormTabViewAttributesInspector.m: in ok:
	code to handle attaching and detaching from the document, when items
	are added and deleted.
	* Palettes/3Containers/GormTabViewEditor.m: Streamlined code in
	delegate.

2005-08-12 01:23 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correction for crash when loading
	.gorm files via [NSApplication openFile:...].

2005-08-11 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Removed explicit check for table
	or text view.
	* GormCore/GormScrollViewAttributesInspector.m: removed explicit 
	check for table or text view.
	* Palettes/3Containers/inspectors.m: Added editorClassName
	* Palettes/4Data/GNUmakefile: Added new files.
	* Palettes/4Data/GormImageViewAttributesInspector.m: Pulled out
	IBObjectAdditions category
	* Palettes/4Data/GormTextViewAttributesInspector.[hm]: Change class
	name to GormTextViewAttributesInspector.
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormDateFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormTextViewEditor.m: Split
	* Palettes/4Data/inspectors.m: Moved all IBObjectAdditions categories
	here.

2005-08-10 21:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: in pasteInSelection,
	pasteType:fromPasteboard:parent: w/ _editedObject as the parent.

2005-08-10 02:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.[hm]: Added retrieveObjectForParent:recursive:
	which retrieves all of the children of a given parent.  Also modified
	detachObject: to use this method.